--- a/src/styles/app/common/variables.scss
+++ b/src/styles/app/common/variables.scss
@@ -16,6 +16,7 @@ $green:                 #37bc9b;
 $primary:               #5d9cec;
 $secondary:             #fff;
 $success:               #27c24c;
+// $success: #95b75d;
 $info:                  #23b7e5;
 $warning:               #ff902b;
 $danger:                #f05050;
