--- a/src/styles/app/common/variables.scss
+++ b/src/styles/app/common/variables.scss
@@ -16,11 +16,13 @@ $green:                 #37bc9b;
 $primary:               #5d9cec;
 $secondary:             #fff;
 $success:               #27c24c;
-// $success: #95b75d;
-$info:                  #23b7e5;
+// $success:               #27c24c;
+// $info:                  #23b7e5;
+$info:                  #336677;
 $warning:               #ff902b;
 $danger:                #f05050;
 $dark:                  #3a3f51;
+
 
 $vodacom-gray:          #414d4e;
 
