--- a/src/styles/themes/theme-ewallet.css
+++ b/src/styles/themes/theme-ewallet.css
@@ -13,13 +13,13 @@ body, .wrapper .section-container {
    Component: top-navbar
  ========================================================================== */
 .topnavbar {
-  background-color: #1797be;
-  background-image: linear-gradient(to right, #1797be 0%, #23b7e5 100%);
+  background-color: #244753;
+  background-image: linear-gradient(to right, #244753 0%, #336677 100%);
   background-repeat: repeat-x;
 }
 @media (min-width: 992px) {
   .topnavbar .navbar-nav > .nav-item.show > .nav-link, .topnavbar .navbar-nav > .nav-item.show > .nav-link:hover, .topnavbar .navbar-nav > .nav-item.show > .nav-link:focus {
-    box-shadow: 0 -3px 0 #1381a3 inset;
+    box-shadow: 0 -3px 0 #1b353e inset;
   }
 }
 .topnavbar .navbar-nav > .nav-item > .navbar-text {
@@ -32,10 +32,10 @@ body, .wrapper .section-container {
 .topnavbar .navbar-nav > .nav-item > .nav-link:hover, .topnavbar .navbar-nav > .nav-item > .nav-link:focus,
 .topnavbar .navbar-nav > .nav-item.show > .nav-link:hover,
 .topnavbar .navbar-nav > .nav-item.show > .nav-link:focus {
-  color: #0c4f63;
+  color: #050a0c;
 }
 .topnavbar .dropdown-item.active, .topnavbar .dropdown-item:active {
-  background-color: #1797be;
+  background-color: #244753;
 }
 
 /* ========================================================================
@@ -52,20 +52,20 @@ body, .wrapper .section-container {
   color: #e1e2e3;
 }
 .sidebar-nav > li > a:focus, .sidebar-nav > li > a:hover, .sidebar-nav > li > .nav-item:focus, .sidebar-nav > li > .nav-item:hover {
-  color: #1797be;
+  color: #244753;
 }
 .sidebar-nav > li > a > em, .sidebar-nav > li > .nav-item > em {
   color: inherits;
 }
 .sidebar-nav > li.active, .sidebar-nav > li.active > a, .sidebar-nav > li.active > .nav-item, .sidebar-nav > li.active .sidebar-nav, .sidebar-nav > li.open, .sidebar-nav > li.open > a, .sidebar-nav > li.open > .nav-item, .sidebar-nav > li.open .sidebar-nav {
   background-color: #383d4e;
-  color: #1797be;
+  color: #244753;
 }
 .sidebar-nav > li.active > .nav-item > em, .sidebar-nav > li.active > a > em, .sidebar-nav > li.open > .nav-item > em, .sidebar-nav > li.open > a > em {
-  color: #1797be;
+  color: #244753;
 }
 .sidebar-nav > li.active {
-  border-left-color: #1797be;
+  border-left-color: #244753;
 }
 
 .sidebar-subnav {
@@ -78,14 +78,14 @@ body, .wrapper .section-container {
   color: #e1e2e3;
 }
 .sidebar-subnav > li > a:focus, .sidebar-subnav > li > a:hover, .sidebar-subnav > li > .nav-item:focus, .sidebar-subnav > li > .nav-item:hover {
-  color: #1797be;
+  color: #244753;
 }
 .sidebar-subnav > li.active > a, .sidebar-subnav > li.active > .nav-item {
-  color: #1797be;
+  color: #244753;
 }
 .sidebar-subnav > li.active > a:after, .sidebar-subnav > li.active > .nav-item:after {
-  border-color: #1797be;
-  background-color: #1797be;
+  border-color: #244753;
+  background-color: #244753;
 }
 
 /* ========================================================================
